Bug 494475 - On-screen display when switching virtual desktops does not show
Summary: On-screen display when switching virtual desktops does not show
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 494416 494602 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-10 18:14 UTC by Josh Robak
Modified: 2024-10-17 12:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Robak 2024-10-10 18:14:45 UTC
SUMMARY
On-screen display when switching virtual desktops does not show. It was working as intended prior to Plasma 6.2.

STEPS TO REPRODUCE
1. If it does not already exist, add pager with virtual desktops to panel
2. Enable "Show on-screen display when switching" in Settings>Window Management>Virtual Desktops
3. Switch between virtual desktops

OBSERVED RESULT
Nothing shows when switching between virtual desktops.

EXPECTED RESULT
The name of the current virtual desktop (and a desktop layout indicator if it is enabled) should display in the middle of the screen when switching.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20241007
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Kernel Version: 6.11.2-1-default (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-10-10 20:20:04 UTC
Can reproduce.
Comment 2 Nate Graham 2024-10-10 20:36:30 UTC
*** Bug 494416 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-10-11 08:56:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1210
Comment 4 Nicolas Fella 2024-10-11 10:43:48 UTC
Git commit 826a495ecb76902192ad0427f887f9955388bf63 by Nicolas Fella, on behalf of Vlad Zahorodnii.
Committed on 11/10/2024 at 10:39.
Pushed by vladz into branch 'master'.

Fix PlasmaWindow type registration

Amends a7d14000a9be1d71ab8a800ea59366b39bc5c2ad.

PlasmaWindow was left out during the port.

M  +6    -0    src/declarativeimports/core/corebindingsplugin.h
M  +0    -1    src/plasmaquick/plasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/826a495ecb76902192ad0427f887f9955388bf63
Comment 5 Vlad Zahorodnii 2024-10-11 10:47:46 UTC
Git commit b668c62c6577018f24bd3c423fc7585a04f397d9 by Vlad Zahorodnii.
Committed on 11/10/2024 at 10:44.
Pushed by vladz into branch 'Plasma/6.2'.

Fix PlasmaWindow type registration

Amends a7d14000a9be1d71ab8a800ea59366b39bc5c2ad.

PlasmaWindow was left out during the port.


(cherry picked from commit 826a495ecb76902192ad0427f887f9955388bf63)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +6    -0    src/declarativeimports/core/corebindingsplugin.h
M  +0    -1    src/plasmaquick/plasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/b668c62c6577018f24bd3c423fc7585a04f397d9
Comment 6 Daniel Kamil Kozar 2024-10-12 15:36:29 UTC
*** Bug 494602 has been marked as a duplicate of this bug. ***