Fix PlasmaWindow type registration

Amends a7d14000a9be1d71ab8a800ea59366b39bc5c2ad.

PlasmaWindow was left out during the port.

BUG: 494475


(cherry picked from commit 826a495ecb76902192ad0427f887f9955388bf63)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>